--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Keiskey.github.com : " />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-    <script src="javascript/main.js" type="text/javascript"></script>
+    <script src="javascripts/main.js" type="text/javascript"></script>
 
     <title>Keiskey.github.com</title>
   </head>
