--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
     <script src="javascripts/main.js" type="text/javascript"></script>
 
-    <title>Keiskey.github.com</title>
+    <title>Keiskey.github.io</title>
   </head>
 
   <body>
