--- a/index.html
+++ b/index.html
@@ -7,13 +7,9 @@
     <script src="//code.jquery.com/jquery-2.2.0.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/4.3.0/lodash.min.js"></script>
     <script src="//coffeescript.org/extras/coffee-script.js"></script>
-    <script type="text/coffeescript">
-      window.addEventListener "load", (event) ->
-        console.log event
-        document.getElementById("wrapper").innerHTML = "hello.2"
-    </script>
+    <script type="text/coffeescript">window.addEventListener "load", (event) -> console.log event</script>
   </head>
   <body>
-    <div id="wrapper"></div>
+    <div id="wrapper">hello.</div>
   </body>
 </html>
