--- a/index/index.html
+++ b/index/index.html
@@ -8,8 +8,10 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/4.3.0/lodash.min.js"></script>
     <script src="//coffeescript.org/extras/coffee-script.js"></script>
     <script type="text/coffeescript">window.addEventListener "load", (event) -> console.log event</script>
+    <script src="./js/main.js"></script>
   </head>
   <body>
-    <div id="wrapper">hello.</div>
+    <div id="wrapper">hello world.</div>
+    <h2>abcdefghi</h2>
   </body>
 </html>
