--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>Various Projects</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
     <script src="//code.jquery.com/jquery-2.2.0.min.js"></script>
@@ -14,8 +14,6 @@
   </head>
   <body>
     <div id="wrapper">hello world.</div>
-    <h1>abcd</h1>
-    <h2>efgh</h2>
-    <p>ijkl</p>
+    <h1>Various Projects</h1>
   </body>
 </html>
