--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
   <body>
     <div id="wrapper">hello world.</div>
     <h1>Various Projects</h1>
+    <input type="date">
+    <input type="month">
   </body>
 </html>
