--- a/index.html
+++ b/index.html
@@ -13,9 +13,45 @@
     <script src="./js/main.js"></script>
   </head>
   <body>
-    <div id="wrapper">hello world.</div>
-    <h1>Various Projects</h1>
-    <input type="date">
-    <input type="month">
+    <div id="wrapper">
+      <h1>Various Projects</h1>
+      <section>
+        <h2>geometry</h2>
+        <ul>
+          <li><a href="geometry/arrow.html">geometry/arrow</a></li>
+          <li><a href="geometry/arrow2.html">geometry/arrow2</a></li>
+          <li><a href="geometry/arrow3.html">geometry/arrow3</a></li>
+          <li><a href="geometry/arrow4.html">geometry/arrow4</a></li>
+          <li><a href="geometry/box-morph.html">geometry/box-morph</a></li>
+          <li><a href="geometry/box.html">geometry/box</a></li>
+          <li><a href="geometry/edit.html">geometry/edit</a></li>
+          <li><a href="geometry/gradation.html">geometry/gradation</a></li>
+          <li><a href="geometry/merge.html">geometry/merge</a></li>
+          <li><a href="geometry/path.html">geometry/path</a></li>
+        </ul>
+      </section>
+      <section>
+        <h2>instancing</h2>
+        <ul>
+          <li><a href="instancing/example-1.html">instancing/example-1</a></li>
+          <li><a href="instancing/example-2.html">instancing/example-2</a></li>
+        </ul>
+      </section>
+      <section>
+        <h2>Particle</h2>
+        <ul>
+          <li><a href="particle/box.html">particle/box</a></li>
+          <li><a href="particle/line.html">particle/line</a></li>
+          <li><a href="particle/points.html">particle/points</a></li>
+        </ul>
+      </section>
+      <section>
+        <h2>network</h2>
+        <ul>
+          <li><a href="network/receive.html">network/receive</a></li>
+          <li><a href="network/send.html">network/send</a></li>
+        </ul>
+      </section>
+    </div>
   </body>
 </html>
