--- a/index.coffee/index.html
+++ b/index.coffee/index.html
@@ -6,6 +6,10 @@
     <title>Various Projects</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
+    <script src="//code.jquery.com/jquery-2.2.0.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/4.3.0/lodash.min.js"></script>
+    <script src="//coffeescript.org/extras/coffee-script.js"></script>
+    <script type="text/coffeescript">window.addEventListener "load", (event) -> console.log event</script>
     <script src="./js/main.js"></script>
   </head>
   <body>
